[package]
name = "bin-proto-derive"
version = "0.5.0"
authors = [
    "Wojciech Graj <wojtek.graj.2004@gmail.com>",
    "Dylan McKay <me@dylanmckay.io>"
]
edition = "2021"
rust-version = "1.63.0"

description = "Derive macros for bin-proto"
license = "MIT"
repository = "https://github.com/wojciech-graj/bin-proto"
documentation = "https://docs.rs/bin-proto"
keywords = ["protocol", "binary", "bit", "codec", "serde"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.82"
