[package]
name = "bin-proto-derive"
version = "0.10.0"
authors = [
    "Wojciech Graj <me@w-graj.net>",
    "Dylan McKay <me@dylanmckay.io>"
]
edition = "2021"
rust-version = "1.83.0"

description = "Derive macros for bin-proto"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/wojciech-graj/bin-proto"
documentation = "https://docs.rs/bin-proto"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
categories = ["encoding", "parsing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.32", features = ["full"] }
quote = "1.0.0"
proc-macro2 = "1.0.0"
