[package]
name = "bin-proto-derive"
version = "0.12.2"
edition = "2021"
rust-version = "1.84.0"

description = "Derive macros for bin-proto"
documentation = "https://docs.rs/bin-proto"
readme = "../README.md"
repository = "https://github.com/wojciech-graj/bin-proto"
license = "MIT"
keywords = ["binary", "decode", "deserialize", "encode", "serialize"]
categories = ["encoding", "no-std::no-alloc", "parsing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = { version = "2.0.32", features = ["full"] }
