[package]
name = "bin-proto"
version = "0.7.0"
authors = [
    "Wojciech Graj <wojtek.graj.2004@gmail.com>",
    "Dylan McKay <me@dylanmckay.io>"
]
edition = "2021"
rust-version = "1.83.0"

description = "Easy binary protocol definitions"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/wojciech-graj/bin-proto"
documentation = "https://docs.rs/bin-proto"
keywords = ["protocol", "binary", "bit", "codec", "serde"]
categories = ["encoding", "parsing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["derive", "std"]
derive = ["bin-proto-derive"]
std = ["bitstream-io/std"]

[dependencies]
bin-proto-derive = { version = "0.7.0", path = "../bin-proto-derive", optional = true }
bitstream-io = { version = "3.0.0-alpha5", git = "https://github.com/tuffy/bitstream-io", rev = "a8b9192", default-features = false }
core2 = "0.4.0"
