[package]
name = "bin-proto"
version = "0.12.4"
authors = ["Wojciech Graj <me@w-graj.net>"]
edition = "2021"
rust-version = "1.84.0"

description = "Conversion to/from binary for arbitrary types"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/wojciech-graj/bin-proto"
documentation = "https://docs.rs/bin-proto"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
categories = ["encoding", "parsing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
alloc = ["bitstream-io/alloc", "core2/alloc"]
default = ["alloc", "derive", "std"]
derive = ["dep:bin-proto-derive"]
prepend-tags = []
std = ["bitstream-io/std", "core2/std", "alloc"]

[dependencies]
bin-proto-derive = { version = "0.12.1", path = "../bin-proto-derive", optional = true }
bitstream-io = { version = "4.6.0", default-features = false }
core2 = { version = "0.4.0", default-features = false }

[dev-dependencies]
proptest = "1.8.0"
