[package]
name = "bin-proto"
version = "0.12.7"
edition = "2021"
rust-version = "1.84.0"

description = "Conversion to/from binary for arbitrary types"
documentation = "https://docs.rs/bin-proto"
readme = "../README.md"
repository = "https://github.com/wojciech-graj/bin-proto"
license = "MIT"
keywords = ["binary", "decode", "deserialize", "encode", "serialize"]
categories = ["encoding", "no-std::no-alloc", "parsing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bin-proto-derive = { path = "../bin-proto-derive", version = "0.12.2", optional = true }
bitstream-io = { version = "4.10.0", default-features = false }
no_std_io2 = { version = "0.9", default-features = false }

[dev-dependencies]
proptest = "1.8.0"

[features]
default = ["alloc", "derive", "std"]
alloc = ["bitstream-io/alloc", "no_std_io2/alloc"]
derive = ["dep:bin-proto-derive"]
prepend-tags = []
std = ["alloc", "bitstream-io/std", "no_std_io2/std"]
