[package]
name = "protocol"
version = "3.4.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = "Easy protocol definitions"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/dylanmckay/protocol"
documentation = "https://docs.rs/protocol"
keywords = ["protocol", "tcp", "udp", "connection", "encoding"]

[features]
default = ["derive", "uuid"]
derive = ["protocol-derive"]

[dependencies]
protocol-derive = { version = "3.4.0", path = "../protocol-derive", optional = true }
bitstream-io = "2.2.0"
uuid = { version = "1.8.0", optional = true }
thiserror = "1.0.58"
